agregamos tema vectorzacion en numpy

--- a/book_numpy.ipynb
+++ b/book_numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,6 +120,137 @@
     "#sub-arreglo de la segunda columna\n",
     "sub_arrg = matriz[1]\n",
     "sub_arrg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([196,  19,  64,   7,  15, 100,  17, 256,   5,   9])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#VECTORIZACION\n",
+    "#Diseña una función vectorizada que calcule el cuadrado de los elementos solo si son números pares.\n",
+    "def cuadra_pares(n:int)->int:   #creamos la funcion para calcular el cuadrado si es par\n",
+    "    if n % 2==0:\n",
+    "        return n**2\n",
+    "    else :\n",
+    "        return n\n",
+    "\n",
+    "#creamo el arreglo que vamos a vectorizar\n",
+    "arreglo = np.random.randint(1,20,10) #Arreglo\n",
+    "arreglo_vectorizado = np.vectorize(cuadra_pares) # creamos una arreglo vectorizado,usando el metodo vectorize() \n",
+    "\n",
+    "arreglo_vectorizado(arreglo) #vectorizamos el arreglo\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1101', '10111', '101', '10101', '10110', '100', '1100', '1001',\n",
+       "       '1001', '10100'], dtype='<U5')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Vectoriza una función que convierta un número en su representación binaria.\n",
+    "#creamos la funcion para convertir decimal a binario\n",
+    "def conversion_a_binario(numero:int)->str:\n",
+    "    binario = \"\"\n",
+    "    while numero >0:\n",
+    "        resiudo = numero % 2\n",
+    "        binario = str(resiudo) + binario\n",
+    "        numero //=2\n",
+    "    return binario\n",
+    "\n",
+    "#creamos el arreglo y vectorizamos con la funcion\n",
+    "elementos = np.random.randint(1,25,10)\n",
+    "elemento_vector = np.vectorize(conversion_a_binario)\n",
+    "\n",
+    "elemento_vector(elementos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['primo', '2', 'primo', 'primo', '14', '12', '16', '12', '18', '16'],\n",
+       "      dtype='<U5')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Crea una función vectorizada que identifique si un número es primo.\n",
+    "#funcion para identificar si es primo\n",
+    "def identificador_primos(numero:int) -> str:\n",
+    "    if numero %2 !=0:\n",
+    "        return 'primo'\n",
+    "    else: \n",
+    "        return numero\n",
+    "\n",
+    "#creamos el arreglo y vectorizamos \n",
+    "arreglo = np.random.randint(1,20,10)\n",
+    "vector_arreglo = np.vectorize(identificador_primos)\n",
+    "\n",
+    "vector_arreglo(arreglo)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([18, 12, 16, 19, 17, 14,  7, 11, 12,  9])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Diseña una función vectorizada que tome dos arreglos de igual tamaño y devuelva el mayor elemento de cada posición.\n",
+    "def maximo_elemento(x:int,y:int) -> int: #funcion para identificar el maximo de cada elemento\n",
+    "    return max(x,y)\n",
+    "\n",
+    "arreglo_1 = np.random.randint(1,20,10) # creamos los arreglos con la misma longitud de numeros\n",
+    "arreglo_2 = np.random.randint(1,20,10)\n",
+    "\n",
+    "arreglo_vector = np.vectorize(maximo_elemento) #vectorizacion de la funcion \n",
+    "\n",
+    "arreglo_vector(arreglo_1,arreglo_2) #output\n"
    ]
   }
  ],
