comenzamos con la segunda leccion de pandas, tema string

--- a/pandas_dtascience/2_String/String.ipynb
+++ b/pandas_dtascience/2_String/String.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1671ab1a-fa0c-4f1f-a316-63ac1fc88d46",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7e6b5092-13dd-4143-a654-4b5a3b776848",
    "metadata": {},
    "outputs": [],
@@ -46,11 +46,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9ea2cad6-896c-488d-976e-cf5401454226",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "d315fe62-3da2-4664-ad52-ab7703847f55",
+       "rows": [
+        [
+         "0",
+         "10"
+        ],
+        [
+         "1",
+         "22"
+        ],
+        [
+         "2",
+         "21"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/plain": [
+       "0    10\n",
+       "1    22\n",
+       "2    21\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeros = pd.Series(lista)\n",
+    "\n",
+    "numeros"
+   ]
   },
   {
    "cell_type": "code",
@@ -70,19 +121,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b8880c16-b8cf-4e36-b8ca-15b4dd25c8ae",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "1431b34d-f7a8-4707-97cd-8c6af033fb84",
+       "rows": [
+        [
+         "0",
+         "10"
+        ],
+        [
+         "1",
+         "22"
+        ],
+        [
+         "2",
+         "21"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/plain": [
+       "0    10\n",
+       "1    22\n",
+       "2    21\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeros.apply(str)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "edc33505-adb9-467e-a610-2b6327d3f34a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "string",
+         "type": "string"
+        }
+       ],
+       "ref": "241290f9-3bb5-4ac9-8036-a4d1b032510b",
+       "rows": [
+        [
+         "0",
+         "10"
+        ],
+        [
+         "1",
+         "22"
+        ],
+        [
+         "2",
+         "21"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/plain": [
+       "0    10\n",
+       "1    22\n",
+       "2    21\n",
+       "dtype: string"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeros.astype(\"string\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "47a20f8c-3c04-40e8-b512-f4df93463a96",
    "metadata": {},
    "outputs": [],
@@ -112,19 +263,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d357d1a7-f150-4ac4-8c6d-f6c12ad5cc39",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nombres = pd.Series(lista)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1e9a39f4-b885-4df1-93c3-cc21f384a23e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "e2e52000-7b17-4683-8d61-eada7749abeb",
+       "rows": [
+        [
+         "0",
+         "Daniel Israel"
+        ],
+        [
+         "1",
+         "Rocio del Carmen"
+        ],
+        [
+         "2",
+         "Paulina Isabelle"
+        ],
+        [
+         "3",
+         "Elias Israel"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0       Daniel Israel\n",
+       "1    Rocio del Carmen\n",
+       "2    Paulina Isabelle\n",
+       "3        Elias Israel\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombres"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,11 +343,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "fbfdfcdc-7d3c-4b41-a4a8-5e873f4a5e34",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "73d28cb6-2da9-43dd-bfe6-8fdd9b518461",
+       "rows": [
+        [
+         "0",
+         "13"
+        ],
+        [
+         "1",
+         "16"
+        ],
+        [
+         "2",
+         "16"
+        ],
+        [
+         "3",
+         "12"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0    13\n",
+       "1    16\n",
+       "2    16\n",
+       "3    12\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombres.str.len()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,11 +413,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "288b9a27-8d9f-4ada-ae40-bcc4e083ed60",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "edbd2284-6ba1-428a-a256-d7ab1a44f890",
+       "rows": [
+        [
+         "0",
+         "daniel israel"
+        ],
+        [
+         "1",
+         "rocio del carmen"
+        ],
+        [
+         "2",
+         "paulina isabelle"
+        ],
+        [
+         "3",
+         "elias israel"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0       daniel israel\n",
+       "1    rocio del carmen\n",
+       "2    paulina isabelle\n",
+       "3        elias israel\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombres.str.lower()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,11 +483,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e6447b3f-512c-4bcd-8e13-eac164be835b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "dd711843-b99c-4cc7-936f-8b4aba16212d",
+       "rows": [
+        [
+         "0",
+         "DANIEL ISRAEL"
+        ],
+        [
+         "1",
+         "ROCIO DEL CARMEN"
+        ],
+        [
+         "2",
+         "PAULINA ISABELLE"
+        ],
+        [
+         "3",
+         "ELIAS ISRAEL"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0       DANIEL ISRAEL\n",
+       "1    ROCIO DEL CARMEN\n",
+       "2    PAULINA ISABELLE\n",
+       "3        ELIAS ISRAEL\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombres.str.upper()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,11 +561,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "1bd15eec-a5b3-4a5c-9168-fbe22c0f422a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "e302fe55-7a22-467b-a9ff-5cbb4221dbaf",
+       "rows": [
+        [
+         "0",
+         "Daniel Israel"
+        ],
+        [
+         "1",
+         "Rocio Del Carmen"
+        ],
+        [
+         "2",
+         "Paulina Isabelle"
+        ],
+        [
+         "3",
+         "Elias Israel"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0       Daniel Israel\n",
+       "1    Rocio Del Carmen\n",
+       "2    Paulina Isabelle\n",
+       "3        Elias Israel\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombres.str.title()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,11 +631,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "a762128a-b834-4236-8ff6-e86734efa354",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "649eca75-0442-4515-808f-7d94a0f14e46",
+       "rows": [
+        [
+         "0",
+         "Daniel israel"
+        ],
+        [
+         "1",
+         "Rocio del carmen"
+        ],
+        [
+         "2",
+         "Paulina isabelle"
+        ],
+        [
+         "3",
+         "Elias israel"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0       Daniel israel\n",
+       "1    Rocio del carmen\n",
+       "2    Paulina isabelle\n",
+       "3        Elias israel\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombres.str.capitalize()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,11 +701,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "373e4405-5cfd-4bd6-9876-41e9b8d603a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "8b10f979-bd46-46a4-ba42-bce86c0505ff",
+       "rows": [
+        [
+         "0",
+         "2"
+        ],
+        [
+         "1",
+         "1"
+        ],
+        [
+         "2",
+         "3"
+        ],
+        [
+         "3",
+         "2"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0    2\n",
+       "1    1\n",
+       "2    3\n",
+       "3    2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombres.str.count(\"a\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,11 +771,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "6d008829-0a74-462f-9266-16c0ed777cd4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "bool",
+         "type": "boolean"
+        }
+       ],
+       "ref": "821cb603-3d9c-4e33-aa96-a440d1bf0747",
+       "rows": [
+        [
+         "0",
+         "True"
+        ],
+        [
+         "1",
+         "False"
+        ],
+        [
+         "2",
+         "False"
+        ],
+        [
+         "3",
+         "False"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0     True\n",
+       "1    False\n",
+       "2    False\n",
+       "3    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombres.str.startswith(\"Daniel\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -264,19 +849,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "88ee0fad-37ea-455c-b334-df4c172642ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "bool",
+         "type": "boolean"
+        }
+       ],
+       "ref": "29f3ea3c-a052-4831-a5a9-f735c4e65813",
+       "rows": [
+        [
+         "0",
+         "True"
+        ],
+        [
+         "1",
+         "False"
+        ],
+        [
+         "2",
+         "False"
+        ],
+        [
+         "3",
+         "True"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0     True\n",
+       "1    False\n",
+       "2    False\n",
+       "3     True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombres.str.contains(\"Israel\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "e6bdd7d2-5d0c-41ac-956a-2efa6ee7c397",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "bool",
+         "type": "boolean"
+        }
+       ],
+       "ref": "63ce16d4-ec5e-4999-b538-046acf16084f",
+       "rows": [
+        [
+         "0",
+         "True"
+        ],
+        [
+         "1",
+         "False"
+        ],
+        [
+         "2",
+         "False"
+        ],
+        [
+         "3",
+         "True"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0     True\n",
+       "1    False\n",
+       "2    False\n",
+       "3     True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombres.str.endswith(\"Israel\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -793,7 +1486,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -807,7 +1500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
