empezamos con el cuaderno de fechas

--- a/pandas_dtascience/3_Fechas/Fechas.ipynb
+++ b/pandas_dtascience/3_Fechas/Fechas.ipynb
@@ -45,11 +45,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0f2491a9-6bbe-46f4-90ac-5a174096394e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2025-09-22 16:13:09.481734')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hoy = pd.Timestamp.now()\n",
+    "hoy"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,19 +75,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "938293af-f3c3-44f7-a6ac-23d3821844c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2262-04-11 23:47:16.854775807')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Timestamp.max"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3abc2690-dc98-4fb2-981c-1ebfa48b3413",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('1677-09-21 00:12:43.145224193')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Timestamp.min"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,11 +125,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3ae62ddb-753b-4d4f-a0f1-d3762c84a7ce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fecha = pd.Timestamp(2022,6,15, 12,0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1c978355",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2022-06-15 12:00:00')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fecha"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,6 +160,27 @@
    "metadata": {},
    "source": [
     "__Ejercicio 4:__ Sumar 5 días y 2 semanas a la fecha anterior:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c041bfba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2022-07-04 12:00:00')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fecha + pd.Timedelta(weeks=2,days=5)"
    ]
   },
   {
@@ -117,19 +201,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7907525f-b4ad-45f4-bb92-a4a9f29ae06f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "incio = pd.Timestamp(2020,6,13)\n",
+    "final = pd.Timestamp(2020,6,16)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ce2191ef-a3d9-43bb-be13-4accbbaf54be",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2020-06-13', '2020-06-14', '2020-06-15', '2020-06-16'], dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.date_range(incio,final)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,11 +241,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9d484bb7-946d-4831-903b-47d0dd12c5df",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2020-06-13', '2020-06-14', '2020-06-15', '2020-06-16',\n",
+       "               '2020-06-17'],\n",
+       "              dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.date_range(incio,periods=5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,11 +272,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "95153b18-515d-4cb9-a08a-b1feb4030128",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2020-06-13', '2020-06-16', '2020-06-19', '2020-06-22'], dtype='datetime64[ns]', freq='3D')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.date_range(incio,periods=4,freq=\"3D\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -656,7 +784,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -670,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
